fix: layout shift view all button mobile
  -feat: add tooltip for it too

--- a/src/app/(app)/globals.css
+++ b/src/app/(app)/globals.css
@@ -168,3 +168,8 @@
 @utility navbar-items-mobile {
   @apply w-full text-left px-6 py-4 hover:bg-black hover:text-white flex items-center text-base font-medium focus-visible:bg-black focus-visible:text-white;
 }
+
+/* SKELETON */
+@utility bg-skeleton {
+  @apply bg-zinc-200;
+}
